[build-system]
build-backend = "maturin"
requires = [
  "maturin>=0.14,<0.15",
]

[project]
name = "decocoder"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
]
dependencies = [
  "numpy",
  "importlib_metadata ; python_version < '3.8'",
]

[tool.usort]
categories = [
    "future",
    "standard_library",
    "third_party_utils",
    "third_party",
    "first_party",
]

[tool.usort.known]
third_party_utils = [
    "hypothesis",
    "pytest",
]
first_party = [
    "decocoder",
]
